--- a/dist.ini
+++ b/dist.ini
@@ -9,5 +9,7 @@ name=Dist-Zilla-Plugin-Prereqs-EnsureVersion
 perl=5.010001
 namespace::autoclean=0
 
-Moose=0
+Config::IOD::Reader=0
 Dist::Zilla::Role::InstallTool=0
+File::HomeDir=0
+Moose=0
