[dist] Re-pass lint-prereqs (core modules must now be listed)

--- a/dist.ini
+++ b/dist.ini
@@ -7,7 +7,10 @@ name=Dist-Zilla-Plugin-Prereqs-EnsureVersion
 
 [Prereqs]
 perl=5.010001
+
 namespace::autoclean=0
+strict=0
+warnings=0
 
 Config::IOD::Reader=0
 Dist::Zilla::Role::InstallTool=0
