--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ namespace::autoclean=0
 strict=0
 warnings=0
 Config::IOD::Reader=0.31
-Dist::Zilla::Role::InstallTool=0
+Dist::Zilla::Role::AfterBuild=0
 File::HomeDir=0
 Moose=0
+
