--- a/dist.ini
+++ b/dist.ini
@@ -10,8 +10,9 @@ perl=5.010001
 namespace::autoclean=0
 strict=0
 warnings=0
-Config::IOD::Reader=0.31
+Config::IOD::Reader=0.340
 Dist::Zilla::Role::AfterBuild=0
 File::HomeDir=0
 Moose=0
+PMVersions::Util=0
 
