--- a/dist.ini
+++ b/dist.ini
@@ -7,3 +7,10 @@ name=Dist-Zilla-Plugin-Prereqs-SetMinimumVersion-FromPmVersions
 
 [Prereqs]
 perl=5.010001
+namespace::autoclean=0
+strict=0
+warnings=0
+Dist::Zilla::Role::PrereqSource=0
+Moose=0
+PMVersions::Util=0
+
